--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Foocoder.GitHub.io by foocoder</title>
+    <title>ExtremeCoding by foocoder</title>
   </head>
 
   <body>
@@ -53,6 +53,5 @@
       </section>
     </div>
 
-    
   </body>
 </html>
