--- a/_posts/2015-08-30-hello_jekyll.html
+++ b/_posts/2015-08-30-hello_jekyll.html
@@ -1,9 +1,9 @@
 ---
-layout:default
-title:Hello,World
+layout: default
+title: Hello,World
 ---
 <h2  >{{ page.title}}</h2>
 <p>
 This is my FIRST BLOG, for test!
 </p>
-<p>{{ page.data|date_to_string}}</p>
+<p>{{ page.date | date_to_string}}</p>
