--- a/_posts/2015-08-30-第一篇博客.html
+++ b/_posts/2015-08-30-第一篇博客.html
@@ -1,8 +1,7 @@
 ---
-layout: default
 title: 我的第一篇博客
+cover-image: hipster.jpg
 ---
-<h2  >{{ page.title}}</h2>
 <p>
 折腾了整整两天，总算把这个看起来依然“残破不堪”的博客搭建起来，当页面终于不再显示404的时候，我激动的眼泪儿都下来了。
 </p>
@@ -16,7 +15,6 @@ title: 我的第一篇博客
 </p>
 <p>来点改变吧，毕竟已经这样平淡的过了20多年，总得去看点大风小浪什么的。</p>
 <p>后续还有好多要折腾的地方，什么模板啊，什么评论啊，什么代码高亮啊...不过想想看，人这辈子不也总是折腾来折腾去的，只要不怕折腾，就够了</p>
-<br>
 <hr/>
 <p>PS:本人胡言乱语之作，不登大雅之堂</p>
 <p>{{ page.date | date_to_string}}</p>
