--- a/archive.html
+++ b/archive.html
@@ -9,13 +9,17 @@ cover-image: 4.jpg
 
     {% unless post.next %}
       <hr style="margin:20px auto;width:80%;background-color:rgba(0,0,0,.1)">
-      <span><h2 class="fa fa-tags">{{ post.date | date: '%Y' }}</h2></span>
+      <h2 class="fa fa-tags" style="font-size:30px">
+          <span>{{ post.date | date: '%Y' }}</span>
+      </h2>
     {% else %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
       {% if year != nyear %}
         <hr style="margin:20px auto;width:80%;background-color:rgba(0,0,0,.1)">
-        <span><h2 class="fa fa-tags">{{ post.date | date: '%Y' }}</h2></span>
+        <h2 class="fa fa-tags" style="font-size:30px">
+            <span>{{ post.date | date: '%Y' }}</span>
+        </h2>
       {% endif %}
     {% endunless %}
 
