change the format of post

--- a/_posts/2015-08-30-第一篇博客.html
+++ b/_posts/2015-08-30-第一篇博客.html
@@ -1,8 +1,8 @@
 ---
 title: 我的第一篇博客
-category: 随感
+categories: 随感
 tags: [Blog, Casually, 胡言乱语]
-cover-image: hipster.jpg
+cover-image: 91.jpg
 ---
 <p>
 折腾了整整两天，总算把这个看起来依然“残破不堪”的博客搭建起来，当页面终于不再显示404的时候，我激动的眼泪儿都下来了。
