--- a/category.html
+++ b/category.html
@@ -8,9 +8,9 @@ cover-image: 7.jpg
   {% for category in site.categories %}
     <hr style="margin:20px auto;width:80%;background-color:rgba(0,0,0,.1)">
     <div>
-    <h2 class="fa fa-bookmark" style="font-size:30px">{{ category|first|capitalize }}
-        <span>({{ category|last|size }})</span>
-    </h2>
+        <h2 class="fa fa-bookmark" style="font-size:30px" id="{{ category|first }}">{{ category|first|capitalize }}
+            <span>({{ category|last|size }})</span>
+        </h2>
         {% for post in category.last %}
             <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><small> • {{ post.date | date: site.date_format }}</small></p>
         {% endfor %}
