--- a/archive.html
+++ b/archive.html
@@ -10,7 +10,7 @@ cover-image: 4.jpg
     {% unless post.next %}
       <hr>
       <h2 class="fa fa-laptop" style="font-size:30px">
-          <span>{{ post.date | date: '%b,%Y' }}</span>
+          <span>{{ post.date | date: '%B,%Y' }}</span>
       </h2>
     {% else %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
@@ -20,7 +20,7 @@ cover-image: 4.jpg
       {% if year != nextyear or month != nextmonth %}
         <hr>
         <h2 class="fa fa-laptop" style="font-size:30px">
-            <span>{{ post.date | date: '%b,%Y' }}</span>
+            <span>{{ post.date | date: '%B,%Y' }}</span>
         </h2>
       {% endif %}
     {% endunless %}
