--- a/archive.html
+++ b/archive.html
@@ -9,7 +9,7 @@ cover-image: 4.jpg
 
     {% unless post.next %}
       <hr>
-      <h2 class="fa fa-laptop" style="font-size:30px">
+      <h2 class="fa fa-laptop" style="font-size:large">
           <span>{{ post.date | date: '%B,%Y' }}</span>
       </h2>
     {% else %}
@@ -19,11 +19,11 @@ cover-image: 4.jpg
       {% capture nextmonth %}{{ post.next.date | date: '%m' }}{% endcapture %}
       {% if year != nextyear or month != nextmonth %}
         <hr>
-        <h2 class="fa fa-laptop" style="font-size:30px">
+        <h2 class="fa fa-laptop" style="font-size:large">
             <span>{{ post.date | date: '%B,%Y' }}</span>
         </h2>
       {% endif %}
     {% endunless %}
 
-    <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><small> • {{ post.date | date: site.date_format }}</small></p>
+    <p class="blogtitle"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><small> • {{ post.date | date: site.date_format }}</small></p>
   {% endfor %}
