--- a/category.html
+++ b/category.html
@@ -1,5 +1,5 @@
 ---
-title: Category
+title: Gallery
 layout: page
 cover-image: 7.jpg
 ---
@@ -7,12 +7,11 @@ cover-image: 7.jpg
 
   {% for category in site.categories %}
     <hr>
-    <div>
-        <h2 class="fa fa-bookmark" style="font-size:30px" id="{{ category|first }}">{{ category|first|capitalize }}
-            <span>({{ category|last|size }})</span>
+        <h2 class="fa fa-coffee" style="font-size:large" id="{{ category|first }}">
+            {{ category | first | capitalize }}
+            <span>({{ category | last | size }})</span>
         </h2>
         {% for post in category.last %}
-            <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><small> • {{ post.date | date: site.date_format }}</small></p>
+            <p class="blogtitle"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><small> • {{ post.date | date: site.date_format }}</small></p>
         {% endfor %}
-    </div>
   {% endfor %}
