--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tag Cloud
 layout: page
-cover-image: 10.jpg
+cover-image: coffee.jpg
 ---
 
 <link rel="stylesheet" type="text/css" href="/js/jqCloud/jqcloud.css" />
