Change Pic, Change Fonts

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 home: true
-cover-image: hipster.jpg
+cover-image: beats.jpg
 ---
 {% for post in paginator.posts %}
     {% assign minutes = post.content | number_of_words | divided_by: 180 %}
