--- a/tags.html
+++ b/tags.html
@@ -23,7 +23,7 @@ cover-image: coffee.jpg
 <!--</script>-->
 
 <hr>
-<div id="example" style="width: 850px; height: 500px;"></div>
+<!--<div id="example" style="width: 850px; height: 500px;"></div>-->
 <hr>
 
 {% for tag in site.tags %}
