--- a/reading.html
+++ b/reading.html
@@ -1,6 +1,22 @@
 ---
 title: Reading
-layout: page
+layout: book
 cover-image: disc.jpg
+books:
+- title: Test
+  status: Reading
+  author: PHD
+  publisher: Shanhai
+  language: Chinese
+  link: http://localhost:4000
+  cover: http://localhost:4000/img/covers/3.jpg
+  description:
+- title: Test
+  status: Reading
+  author: PHD
+  publisher: Shanhai
+  language: Chinese
+  link: http://localhost:4000
+  cover: http://localhost:4000/img/covers/3.jpg
+  description:
 ---
-
