--- a/reading.html
+++ b/reading.html
@@ -1,5 +1,6 @@
 ---
-title: Reading
+title: Reading Programme
+subtitle: Building Insights, Breaking Boundaries
 layout: book
 cover-image: disc.jpg
 books:
