--- a/tags.html
+++ b/tags.html
@@ -1,6 +1,7 @@
 ---
-title: Tag Cloud
-layout: page
+title: Tags
+subtitle: the Tag Clouds
+layout: default
 cover-image: coffee.jpg
 ---
 
@@ -22,7 +23,6 @@ $(function() {
 });
 </script>
 
-<hr>
 <div id="example" style="width: 100%; height: 500px;"></div>
 <hr>
 
