--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 home: true
+title: Meta Code
+subtitle: Just for Fun
 cover-image: beats.jpg
 ---
 {% for post in paginator.posts %}
